objects/AcctSeed__Payment_Proposal_Line__c/AcctSeed__Payment_Proposal_Line__c.object-meta.xml
<CustomObject>
    <label>Payment Proposal Line</label>
    <nameField>
        <displayFormat>PPL-{000000}</displayFormat>
        <label>Payment Proposal Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Proposal Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>