objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Aggregate_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Aggregate_Balance__c</fullName>
    <label>Aggregate Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>