objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Amount__c</fullName>
    <label>Amount to Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>