objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Credit_Applied__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Credit_Applied__c</fullName>
    <label>Credit Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>