objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Current_Balance__c</fullName>
    <formula>IF( 
ISBLANK(AcctSeed__Payable__c), 
AcctSeed__Aggregate_Balance__c, 
AcctSeed__Payable__r.AcctSeed__Total__c - AcctSeed__Payable__r.AcctSeed__Paid_Amount__c - AcctSeed__Payable__r.AcctSeed__Credit_Memo_Applied_Amount__c - IF(AcctSeed__Payable__r.AcctSeed__Reverse_Charge__c, AcctSeed__Payable__r.AcctSeed__Purchase_Tax3__c,0) - AcctSeed__Discount_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>