objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>