objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Due_Date__c</fullName>
    <formula>AcctSeed__Payable__r.AcctSeed__Due_Date__c</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>