objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Early_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Early_Pay_Date__c</fullName>
    <formula>AcctSeed__Payable__r.AcctSeed__EarlyPayDate__c</formula>
    <label>Early Pay Date</label>
    <type>Date</type>
</CustomField>