objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Is_Credit__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Is_Credit__c</fullName>
    <formula>IF(AcctSeed__Amount__c &lt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Credit</label>
    <type>Checkbox</type>
</CustomField>