objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Is_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>