objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Issue_Date__c</fullName>
    <formula>AcctSeed__Payable__r.AcctSeed__Date__c</formula>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>