objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Parent__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>AcctSeed__Payment_Proposal_Line__c</referenceTo>
    <relationshipLabel>Payment Proposal Lines (Parent)</relationshipLabel>
    <relationshipName>Payment_Proposal_Lines_Child</relationshipName>
    <type>Lookup</type>
</CustomField>