objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Payable__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable</label>
    <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
    <relationshipLabel>Payment Proposal Lines</relationshipLabel>
    <relationshipName>Payment_Proposal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>