objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Date__c</fullName>
    <formula>AcctSeed__Payment_Proposal__r.AcctSeed__Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>