objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Payment_Proposal__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Proposal__c</fullName>
    <label>Payment Proposal</label>
    <referenceTo>AcctSeed__Payment_Proposal__c</referenceTo>
    <relationshipLabel>Payment Proposal Lines</relationshipLabel>
    <relationshipName>Payment_Proposal_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>