objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Posting_Status__c</fullName>
    <formula>TEXT(AcctSeed__Payable__r.AcctSeed__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Status</label>
    <type>Text</type>
</CustomField>