objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>