objects/AcctSeed__Payment_Proposal_Line__c/fields/AcctSeed__Vendor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Proposal Lines</relationshipLabel>
    <relationshipName>Payment_Proposal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>