objects/AcctSeed__Payment_Proposal_Line__c/validationRules/AcctSeed__Vendor_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Vendor_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(AcctSeed__Parent__c), false, IF(AcctSeed__Parent__r.AcctSeed__Vendor__c != AcctSeed__Vendor__c ,true ,false))</errorConditionFormula>
    <errorDisplayField>AcctSeed__Vendor__c</errorDisplayField>
    <errorMessage>The Vendor on the Payable must match the Vendor on the parent Payment Proposal Line</errorMessage>
</ValidationRule>